$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.537 2008/01/17 12:56:13 nm4 Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.70
-----------------

NM/01 Bugzilla 657: Embedded PCRE removed from the exim source tree.
      When building exim an external PCRE library is now needed -
      PCRE is a system library on the majority of modern systems.
      See entry on PCRE_LIBS in EDITME file.

Exim version 4.69
-----------------

TK/01 Add preliminary DKIM support. Currently requires a forked version of
      ALT-N's libdkim that I have put here:
      http://duncanthrax.net/exim-experimental/

      Note to Michael Haardt: I had to rename some vars in sieve.c. They
      were called 'true' and it seems that C99 defines that as a reserved
      keyword to be used with 'bool' variable types. That means you could
      not include C99-style headers which use bools without triggering
      build errors in sieve.c.

NM/01 Bugzilla 592: --help option is handled incorrectly if exim is invoked
      as mailq or other aliases.  Changed the --help handling significantly
      to do whats expected.  exim_usage() emits usage/help information.

SC/01 Added the -bylocaldomain option to eximstats.

NM/02 Bugzilla 619: Defended against bad data coming back from gethostbyaddr

NM/03 Bugzilla 613: Documentation fix for acl_not_smtp

NM/04 Bugzilla 628: PCRE update to 7.4 (work done by John Hall)


Exim version 4.68
-----------------

PH/01 Another patch from the Sieve maintainer.

PH/02 When an IPv6 address is converted to a string for single-key lookup
      in an address list (e.g. for an item such as "net24-dbm;/net/works"),
      dots are used instead of colons so that keys in lsearch files need not
      contain colons. This was done some time before quoting was made available
      in lsearch files. However, iplsearch files do require colons in IPv6 keys